enforce Java 8 for build
git-svn-id: https://svn.apache.org/repos/asf/chemistry/opencmis/trunk@1723514 13f79535-47bb-0310-9956-ffa450edef68