@@ -17,14 +17,13 @@ You can build OpenCMIS like this:
 
     mvn clean install
 
-You need Maven 3 with Java 7 (or higher) for the build.
-Set the environment variable MAVEN_OPTS to 
-'-Xmx1024m -XX:MaxPermSize=256m' to give Maven more memory.
+You need Maven 3 with Java 8 (or higher) for the build.
+
 
 License (see also package specific LICENSE files)
 =================================================
 
-Collective work: Copyright 2010-2015 The Apache Software Foundation.
+Collective work: Copyright 2010-2016 The Apache Software Foundation.
 
 Licensed to the Apache Software Foundation (ASF) under one or more
 contributor license agreements.  See the NOTICE file distributed with
